<resources>
    <string name="app_name">MR.jeruknipizzz</string>
    <string name="deskripsi">Spesifikasi Husqvarna Supermoto 701 Standard Husqvarna Supermoto 701 tersedia dalam pilihan mesin Petrol di Indonesia Off Road baru dari Husqvarna hadir dalam 2 varian. Bicara soal spesifikasi mesin Husqvarna Supermoto 701, ini ditenagai dua pilihan mesin Petrol berkapasitas 692.7 cc. Supermoto 701 tersedia dengan transmisi Manual tergantung variannya. serta ground clearance 270 mm.
    </string>
    <string name="perkiraan_harga">Rp 210 Juta</string>
    <string name="Pilihan_Angsuran">Rp 4,79 Juta</string>
    <string name="Rem_Depan">Disc</string>
    <string name="Kapasitas">692.7 cc</string>
    <string name="Kategori">Off Road</string>
    <string name="Opsi_start">Electric</string>




</resources>